<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/checkoutLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout 
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="0px"
        android:layout_height="0px" />
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">
        
        <TableLayout
            android:id="@+id/tableLayout1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1.00" >
	        
            <TableRow
	            android:id="@+id/tableRow4"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_margin="5dp" >
	            
	            <TextView
			         android:id="@+id/currentDate"
			         android:layout_width="wrap_content"
			         android:layout_height="wrap_content"
			         android:layout_gravity="left"
			         android:layout_weight="3"
			         android:textAppearance="?android:attr/textAppearanceLarge"/>
	            <!--  
	            <Button
			        android:id="@+id/btnChangeDate"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_weight="0.1"
			        style="@style/btnStyleBlackpearl"
			        android:text="@string/dateChange" />
		        -->
	            <!--  
	            <TextView
	                android:id="@+id/dummy"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"/>
	                -->
	            
	            
	        </TableRow>
	        
            <TableRow
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_margin="5dp" >
	
	            <TextView
	                android:id="@+id/ReceiptNo"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/ReceiptNo"
	                android:textAppearance="?android:attr/textAppearanceLarge" />
	            
	            <EditText
	                android:id="@+id/receiptNoInput"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:ems="10"
	                android:imeOptions="actionDone"
	                android:inputType="number" >
	                
	            </EditText>
	        </TableRow>
	
	        <TableRow
	            android:id="@+id/tableRow1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:gravity="center_vertical"
	            android:layout_margin="5dp" >
	
	            <TextView
	                android:id="@+id/boatLabel"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/Boat"
	                android:layout_marginRight="20dp"
	                android:textAppearance="?android:attr/textAppearanceLarge" />
	
	            <Spinner
	                android:id="@+id/custSpinner"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginRight="20dp"
	                android:drawSelectorOnTop="true" />
	
	            <Button
	                android:id="@+id/addCustBtn"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                style="@style/btnStyleBlackpearl"
	                android:text="@string/Plus" />
	        </TableRow>
	
	        <TableRow
	            android:id="@+id/tableRow2"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:gravity="center_vertical"
	            android:layout_margin="5dp" >
	
	            <TextView
	                android:id="@+id/fishTypeLabel"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/FishType"
	                android:layout_marginRight="20dp"
	                android:textAppearance="?android:attr/textAppearanceLarge" />
	
	            <Spinner
	                android:id="@+id/fishTypeSpinner"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:drawSelectorOnTop="true" />
	        </TableRow>
	        
	        <TableRow
	            android:id="@+id/tableRow3"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_margin="5dp" >
	
	            <TextView
	                android:id="@+id/pricePerPoundLabel"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/PricePerPound"
	                android:textAppearance="?android:attr/textAppearanceLarge" />
	            
	            <EditText
	                android:id="@+id/pricePerPoundInput"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:ems="10"
	                android:imeOptions="actionDone"
	                android:inputType="numberDecimal" >
	                
	            </EditText>
	        </TableRow>
	        
	        <TableRow
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_margin="5dp" >
	
	            <TextView
	                android:id="@+id/Weight"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/Weight"
	                android:textAppearance="?android:attr/textAppearanceLarge" />
	            
	            <EditText
	                android:id="@+id/weightInput"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:ems="10"
	                android:imeOptions="actionDone"
	                android:inputType="numberDecimal" >
	                
	            </EditText>
	            
	            <TextView
	                android:id="@+id/lbs"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/lbs"
	                android:layout_marginRight="20dp"
	                android:textAppearance="?android:attr/textAppearanceLarge" />
	        </TableRow>
	        
	        <TableRow
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_margin="5dp" >
	    		
                <Button
	                android:id="@+id/addOrderItem"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                style="@style/btnStyleBlackpearl"
	                android:text="@string/add_order_item" />
	        
	        </TableRow>
	        
	    </TableLayout>
	    
        <TableLayout
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:layout_weight="1" >
	        
            <TableRow
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_margin="5dp" >
	        
                <fragment
			        android:id="@+id/chkoutFragment"
			        android:name="com.example.fishpos.CheckoutListFragment"
			        android:layout_width="match_parent"
			        android:layout_height="match_parent" />
                
	        </TableRow>
	        
            <TableRow
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_margin="5dp" >
	    
	        
	        </TableRow>
	        
            <TableRow
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_margin="5dp" >
	    
		        <TextView
			         android:layout_width="wrap_content"
			         android:layout_height="wrap_content"
			         android:layout_gravity="center"
			         android:text="@string/subtotal"
			         android:textAppearance="?android:attr/textAppearanceLarge"/>
	        
	        </TableRow>
	        
            <TableRow
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_margin="5dp" >
	    
		        <TextView
		            android:id="@+id/totalPrice"
			         android:layout_width="wrap_content"
			         android:layout_height="wrap_content"
			         android:layout_gravity="center"
			         android:textSize="50sp"
			         android:textAppearance="?android:attr/textAppearanceLarge"/>
	        
	        </TableRow>
	        
	   	</TableLayout>
        
    </LinearLayout>
            
    <TextView
        android:id="@+id/output"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:gravity="center" >
	
	    <Button
	        android:id="@+id/checkout"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/Checkout"
	        style="@style/btnStyleBlackpearl"
	        android:layout_gravity="top"
	        android:width="300dp" />
	</LinearLayout>

</LinearLayout>