<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.fishpos.AddCustomer" >

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center" >
        
        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/BoatNo"
                android:layout_margin="10dp"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/addBoatNoTxt"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:ems="10"
                android:imeOptions="actionDone"
                android:inputType="text" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/BoatName"
                android:layout_margin="10dp"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/addBoatNameTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:imeOptions="actionDone"
                android:inputType="text" />

        </TableRow>
        
        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CptName"
                android:layout_margin="10dp"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/addCptNameTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:imeOptions="actionDone"
                android:inputType="text" />
            
            <TextView
                android:id="@+id/sinLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SIN"
                android:layout_margin="10dp"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            
            <EditText
                android:id="@+id/cptSIN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:imeOptions="actionDone"
                android:inputType="text" />

        </TableRow>
        
        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CrewName"
                android:layout_margin="10dp"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/addCrewName1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:imeOptions="actionDone"
                android:inputType="text" />
            
            <TextView
                android:id="@+id/sinLabel1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SIN"
                android:layout_margin="10dp"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            
            <EditText
                android:id="@+id/SIN1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:imeOptions="actionDone"
                android:inputType="text" />

        </TableRow>
        
        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CrewName"
                android:layout_margin="10dp"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/addCrewName2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:imeOptions="actionDone"
                android:inputType="text" />
            
            <TextView
                android:id="@+id/sinLabel2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SIN"
                android:layout_margin="10dp"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            
            <EditText
                android:id="@+id/SIN2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:imeOptions="actionDone"
                android:inputType="text" />

        </TableRow>
        
        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CrewName"
                android:layout_margin="10dp"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/addCrewName3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:imeOptions="actionDone"
                android:inputType="text" />
            
            <TextView
                android:id="@+id/sinLabel3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SIN"
                android:layout_margin="10dp"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            
            <EditText
                android:id="@+id/SIN3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:imeOptions="actionDone"
                android:inputType="text" />

        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tableLayout1"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="59dp"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/addNewCustBtn"
            style="@style/btnStyleBlackpearl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:width="200dp"
            android:text="@string/Add" />

        <Button
            android:id="@+id/clearFieldsAddCustomer"
            style="@style/btnStyleBlackpearl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="200dp"
            android:text="@string/Clear" />
    </LinearLayout>

</RelativeLayout>